--- a/res/layout/collect_tab_activity.xml
+++ b/res/layout/collect_tab_activity.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="收藏"
+            android:text="我的收藏"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
     </RelativeLayout>
