--- a/res/layout/setting_tab_activity.xml
+++ b/res/layout/setting_tab_activity.xml
@@ -77,14 +77,16 @@
             android:orientation="horizontal" >
 
             <TextView
+                android:id="@+id/setting_textview_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
-                android:text="设置锁屏密码"
+                android:text="设置密码"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#000000" />
 
             <TextView
+                android:id="@+id/setting_textview_password_hint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="（亲，保护隐私哦~）"
