--- a/res/drawable/app_btn_back.xml
+++ b/res/drawable/app_btn_back.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/app_btn_orange"/>
-    <item android:state_focused="true" android:drawable="@drawable/app_btn_orange"/>
-    <item android:drawable="@drawable/app_btn_blue"/>
+    <item android:state_pressed="true" android:drawable="@drawable/app_back_press"/>
+    <item android:state_focused="true" android:drawable="@drawable/app_back_press"/>
+    <item android:drawable="@drawable/app_back_normal"/>
 </selector>
