--- a/res/layout/home_tab_list_item.xml
+++ b/res/layout/home_tab_list_item.xml
@@ -1,40 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="#dddddd"
-    android:padding="1px" >
+    android:background="@drawable/home_tab_galleryitem_bg" >
+
+    <com.tianxia.widget.image.SmartImageView
+        android:id="@+id/item_image"
+        android:layout_width="fill_parent"
+        android:layout_height="207dp"
+        android:scaleType="centerCrop" />
+
+    <!--
+    <ImageView
+        android:id="@+id/item_image"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="centerCrop" />
+    -->
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFA"
-        android:orientation="vertical"
-        android:padding="1px" >
-
-        <com.tianxia.widget.image.SmartImageView
-            android:id="@+id/item_image"
-            android:layout_width="fill_parent"
-            android:layout_height="90dip"
-            android:scaleType="centerCrop" />
+        android:layout_alignParentBottom="true"
+        android:background="#90989892"
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/item_category"
+            android:id="@+id/home_tab_galleryitem_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
             android:ellipsize="end"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:text="￥25"
+            android:textColor="#ffffff"
+            android:textSize="10sp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/home_tab_galleryitem_sales"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="销量：321"
+            android:textColor="#ffffff"
+            android:textSize="10sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/item_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:background="@drawable/home_gridview_item_count_bg"
-        android:gravity="center"
-        android:singleLine="true"
-        android:visibility="gone" />
-
-</FrameLayout>
+</RelativeLayout>
