--- a/res/layout-tvdpi/home_tab_list_item.xml
+++ b/res/layout-tvdpi/home_tab_list_item.xml
@@ -15,7 +15,7 @@
     <ImageView
         android:id="@+id/item_image"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="188dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
