--- a/res/layout/home_details_activity.xml
+++ b/res/layout/home_details_activity.xml
@@ -78,10 +78,11 @@
 
         <Gallery
             android:id="@+id/home_details_gallery"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_margin="5dp" />
+            android:layout_margin="5dp"
+            android:spacing="5dp" />
 
         <ImageView
             android:layout_width="wrap_content"
