--- a/res/layout/collect_tab_list_item.xml
+++ b/res/layout/collect_tab_list_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/collect_listitem_imageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/home_tab_galleryitem_bg" >
